Some general changes along with corrections

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -39,6 +39,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{eso-pic}
+\usepackage{listings}
 \newcommand\BackgroundPic{%
 \put(0,0){%
 \parbox[b][\paperheight]{\paperwidth}{%
