--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -31,7 +31,7 @@ Both of these mechanisms have been investigated with various experiments includi
 
 \subsubsection{Bottom-up scenario}
 \label{subsec:Bupsce}
-There are many proposed ways in which \glspl{CR} could get accelerated by astrophysical sources. One of the most widely accepted descriptions that can explain most of the observed \glspl{CR} that originate from our Galaxy is the diffusive shock acceleration also known as Fermi acceleration~\cite{PhysRev.75.1169}. Qualitatively one can explain Fermi acceleration as follows: High energy violent phenomena such as a massive star reaching the end of its life cycle and undergoing a supernova explosion can produce an intense shockwave which propagates outwards towards the star's outer layers. As the shock wave progresses and moves through the \gls{ISM} it sweeps up and compresses the surrounding gas and magnetic fields creating a region of very high pressure and magnetic turbulence known as the shock front. The charged particles can get trapped in such a shock front and repeatedly cross over this region of magnetic turbulence experiencing magnetic irregularities and constantly changing direction under magnetic confinement thus experiencing electric fields each time they cross which accelerate them to higher energies. An illustration is shown in fig.~\ref{fig:Shock_cartoon}. The shock front is turbulent, and particles can cross it multiple times, gaining energy at each passage. Eventually, some particles can acquire enough energy to escape the shock region and travel the required distances to reach the Earth. Such an interpretation can explain the \glspl{CR} originating in our Galaxy (<$10^{15}$eV) and point towards supernovae and its remnants as potential sources but to explain the \glspl{UHECR} (>$10^{19}$eV) we need other sources and mechanisms. The energy that can be produced by the accelerator is limited by the gyroradius of the accelerator. This has been illustrated by Hillas~\cite{1984ARA&A..22..425H} where he illustrated the potential sources of \glspl{CR} on a plot of magnetic field strength vs size. A modified version of his original plot with the inclusion of modern sources is shown in fig.~\ref{fig:Hillas_modified}. Another limitation to the energy of the \glspl{CR} produced by different sources is the energy budget that an accelerator must possess. This has been estimated in~\cite{Murase:2008sa} under the assumption that \glspl{UHECR} are primarily extragalactic protons and at Auger~\cite{2018_auger_comp_spec} via the measurements of the CR spectrum. 
+There are many proposed ways in which \glspl{CR} could get accelerated by astrophysical sources. One of the most widely accepted descriptions that can explain most of the observed \glspl{CR} that originate from our Galaxy is the diffusive shock acceleration also known as Fermi acceleration~\cite{PhysRev.75.1169}. Qualitatively one can explain Fermi acceleration as follows: High energy violent phenomena such as a massive star reaching the end of its life cycle and undergoing a supernova explosion can produce an intense shockwave which propagates outwards towards the star's outer layers. As the shock wave progresses and moves through the \gls{ISM} it sweeps up and compresses the surrounding gas and magnetic fields creating a region of very high pressure and magnetic turbulence known as the shock front. The charged particles can get trapped in such a shock front and repeatedly cross over this region of magnetic turbulence experiencing magnetic irregularities and constantly changing direction under magnetic confinement thus experiencing electric fields each time they cross which accelerate them to higher energies. An illustration is shown in Fig.~\ref{fig:Shock_cartoon}. The shock front is turbulent, and particles can cross it multiple times, gaining energy at each passage. Eventually, some particles can acquire enough energy to escape the shock region and travel the required distances to reach the Earth. Such an interpretation can explain the \glspl{CR} originating in our Galaxy (<$10^{15}$eV) and point towards supernovae and its remnants as potential sources but to explain the \glspl{UHECR} (>$10^{19}$eV) we need other sources and mechanisms. The energy that can be produced by the accelerator is limited by the gyroradius of the accelerator. This has been illustrated by Hillas~\cite{1984ARA&A..22..425H} where he illustrated the potential sources of \glspl{CR} on a plot of magnetic field strength vs size. A modified version of his original plot with the inclusion of modern sources is shown in Fig.~\ref{fig:Hillas_modified}. Another limitation to the energy of the \glspl{CR} produced by different sources is the energy budget that an accelerator must possess. This has been estimated in~\cite{Murase:2008sa} under the assumption that \glspl{UHECR} are primarily extragalactic protons and at Auger~\cite{2018_auger_comp_spec} via the measurements of the CR spectrum. 
 
 \begin{figure}[t!]
   \centering
@@ -96,9 +96,9 @@ These processes are also called "Photo-pion Production". The thresholds for thes
     (A,Z) + \gamma_{\text{CMB}} &\longrightarrow (A-n, Z- n') + nN ,  
   \end{aligned} 
 \end{equation}
-with $n\,(n')$ being the number of stripped nucleons (protons). The mean free path for photo-disintegration for a photon field such as the CMB is similar to that of photo-pion production. Even though, the Pierre Auger Observatory observes a suppression in the \gls{CR} spectrum above the \gls{GZK} cutoff~\cite{KAMPERT2014318}, it does not claim it to be just due to GZK limit. It has also observed \glspl{CR} above the \gls*{GZK} cutoff. This issue along with its implications is discussed later in sec.~\ref{subsubsec:CRspectrum}. One of the other consequences arising from the interaction with the CMB is the interaction of high energy photons (gamma rays) to produce electron-positron pairs, $\gamma_{\text{UHECR}} + \gamma_{\text{CMB}} \longrightarrow e^+ + e^- $. This is an important consequence that alters both the expected \gls{UHECR} spectrum and the CR spectrum at Earth and also just leaves neutrinos as one of the few known UHE particles that can point back directly to their sources.
+with $n\,(n')$ being the number of stripped nucleons (protons). The mean free path for photo-disintegration for a photon field such as the CMB is similar to that of photo-pion production. Even though, the Pierre Auger Observatory observes a suppression in the \gls{CR} spectrum above the \gls{GZK} cutoff~\cite{KAMPERT2014318}, it does not claim it to be just due to GZK limit. It has also observed \glspl{CR} above the \gls*{GZK} cutoff. This issue along with its implications is discussed later in section~\ref{subsubsec:CRspectrum}. One of the other consequences arising from the interaction with the CMB is the interaction of high energy photons (gamma rays) to produce electron-positron pairs, $\gamma_{\text{UHECR}} + \gamma_{\text{CMB}} \longrightarrow e^+ + e^- $. This is an important consequence that alters both the expected \gls{UHECR} spectrum and the CR spectrum at Earth and also just leaves neutrinos as one of the few known UHE particles that can point back directly to their sources.
 
-The production of these high energy neutrinos arising from the pions produced during the Photo-pion interaction or via the neutrons produced during photo-disintegration is discussed later in sec.~\ref{sec:UHENu} 
+The production of these high energy neutrinos arising from the pions produced during the Photo-pion interaction or via the neutrons produced during photo-disintegration is discussed later in section~\ref{sec:UHENu} 
 
 \subsection{Latest results}
 \label{subsec:CRresults}
@@ -134,7 +134,7 @@ Below $10^{13}$eV \glspl{CR} from the Sun dominate the spectrum. The galactic or
 
 2. \textbf{Maximum Rigidity:} In this scenario, the cutoff is due to the sources of the extragalactic \glspl{CR} reaching their maximum potential for acceleration for different particles i.e. maximum rigidity. Such a scenario is already observed in the spectrum for Galactic sources (\textit{knee}). An indirect proof of this mechanism can come from the observed composition from the \textit{ankle} region to the cutoff. If the composition shifts from lighter to heavier nuclei this would be proof of a cutoff at the potential extragalactic sources. 
 
-3. \textbf{Photo-disintegration:} This effect was also discussed before in sec.~\ref{subsubsec:GZK}. However, for such a scenario the cutoff would appear in steps depending on the mass of the nuclei. 
+3. \textbf{Photo-disintegration:} This effect was also discussed before in section~\ref{subsubsec:GZK}. However, for such a scenario the cutoff would appear in steps depending on the mass of the nuclei. 
 
 It is likely that the cutoff and the suppression are not just because of one of the above-mentioned scenarios but are due to a combination of all three. In theory, \gls{GZK} and Photo-disintegration could explain the observed spectrum but the non-observance of \gls*{GZK} neutrinos and the composition measurements gather otherwise. It also shows that even though the CR spectrum gives a very nice overview, other crucial measurements of composition and multi-messengers are equally important allies to the spectrum measurements for constraining the origin and propagation of \glspl{CR}.
 
@@ -149,9 +149,9 @@ The types of particles the \gls{CR} flux at Earth is made of is called the \gls*
   \label{fig:CR-composition}
 \end{figure}
 
-The process of estimating the mass requires a very robust simulation that can reconstruct an EAS perfectly for a certain primary and a direct observation of $X_{\text{max}}$. At the Pierre Auger Observatory The \gls{FD}, cf. section~\ref{sec:Fl_det}, is used to directly measure the $X_{\text{max}}$ on an event by event basis. The recent results from the Pierre Auger Observatory are shown in fig~\ref{fig:CR-composition}. In both the figures the composition initially turns lighter and then seems to change from lighter to heavier nuclei at E $\sim$18.5 EeV. This could be an indication of the switch from a galactic component to an extragalactic component around the \textit{ankle} consistent with the maximum rigidity scenario as mentioned in the section above.
+The process of estimating the mass requires a very robust simulation that can reconstruct an EAS perfectly for a certain primary and a direct observation of $X_{\text{max}}$. At the Pierre Auger Observatory The \gls{FD}, cf. section~\ref{sec:Fl_det}, is used to directly measure the $X_{\text{max}}$ on an event by event basis. The recent results from the Pierre Auger Observatory are shown in Fig.~\ref{fig:CR-composition}. In both the figures the composition initially turns lighter and then seems to change from lighter to heavier nuclei at E $\sim$18.5 EeV. This could be an indication of the switch from a galactic component to an extragalactic component around the \textit{ankle} consistent with the maximum rigidity scenario as mentioned in the section above.
 
-However, the duty cycle of the \gls{FD}$\sim$14\% compared to the \gls{SD} $\sim$100\% leads to very limited statistics. Currently, this problem is solved by defining a new observable described in~\cite{2017arXiv171007249T} which has helped increase the number of events used to estimate the mass composition by nearly 14 times. The results for this are also shown in fig.~\ref{fig:CR-composition}. Additionally, the energy dependent mass composition can be fitted simultaneously with the \gls{CR} spectrum observed at the Pierre Auger Observatory with the only required assumption being about the model used to produce and propagate the \glspl{CR} from the sources. Such type of analysis performed at the Pierre Auger Observatory can be found in~\cite{2018_auger_comp_spec}. With the current Pierre Auger Observatory measurements four different mass components are required to best describe the data with proton component completely disfavoured for the highest energies.
+However, the duty cycle of the \gls{FD}$\sim$14\% compared to the \gls{SD} $\sim$100\% leads to very limited statistics. Currently, this problem is solved by defining a new observable described in~\cite{2017arXiv171007249T} which has helped increase the number of events used to estimate the mass composition by nearly 14 times. The results for this are also shown in Fig.~\ref{fig:CR-composition}. Additionally, the energy dependent mass composition can be fitted simultaneously with the \gls{CR} spectrum observed at the Pierre Auger Observatory with the only required assumption being about the model used to produce and propagate the \glspl{CR} from the sources. Such type of analysis performed at the Pierre Auger Observatory can be found in~\cite{2018_auger_comp_spec}. With the current Pierre Auger Observatory measurements four different mass components are required to best describe the data with proton component completely disfavoured for the highest energies.
 
 The future advancements of the AugerPrime~\cite{ANASTASI2022167497} will further increase the capability of the Pierre Auger Observatory in measuring mass composition. The addition of a Radio Detector can present an independent measurement of the $X_{\text{max}}$ offering an important cross-check on the \gls{FD} measurement. 
 
@@ -164,7 +164,7 @@ The future advancements of the AugerPrime~\cite{ANASTASI2022167497} will further
   \label{fig:CR-anisotropy}
 \end{figure}
 
-Even though the \glspl{CR} are mostly charged particles and can easily get deflected by the magnetic fields~\cite{Ar_mburo_Garc_a_2021} present in the cosmos one can still estimate the arrival directions of these \glspl{CR} with the help of a good pointing resolution and an understanding of these magnetic fields. The pointing resolution depends on the detector and the Pierre Auger Observatory already has an excellent pointing accuracy of $\sim 0.7^{\circ}$~\cite{BONIFAZI200920}. The magnetic fields on the other hand are complicated to deduce and model. However, this lack of knowledge can be ignored by just looking at \glspl{CR} of high energies since the expected deflections for such \glspl{CR} are expected to be small. At the Pierre Auger Observatory the arrival directions of more than 2,600 \glspl{CR} above 32EeV were estimated and analysed to look for potential sources of these \glspl{CR}~\cite{Abreu_2022}. The most significant result from this study is shown in fig.~\ref{fig:CR-anisotropy}. The figure clearly shows the presence of anisotropies which are deviations from uniformity across the sky. The anisotropies are also pointed away from the Galactic centre indicating that the \glspl{UHECR} have an extragalactic origin. The hypothesis is further confirmed by the increase in anisotropy with energy shown in~\cite{Abreu_2022}. The presence of these anisotropies not far from the Galactic spiral arm as seen in fig~\ref{fig:CR-anisotropy} also gives further proof of an extragalactic origin of these \glspl{UHECR}. Further, for low energies E> 0.03 EeV studies looking at large scale structures such as dipolar flux modulation in~\cite{Aab_2020_dipole_modulation} also show a shift of the anisotropy dipole more towards the galactic centre with decreasing energy with a significance of $\sim 6 \sigma$. This can again be interpreted as a transition in CR sources from Galactic to extragalactic component. Even though this result is corroborated by the measurements done by KASCADE-Grande, IceCube and IceTop due to the decrease in sensitivity of the Pierre Auger experiment for these energies the result is not conclusive yet.
+Even though the \glspl{CR} are mostly charged particles and can easily get deflected by the magnetic fields~\cite{Ar_mburo_Garc_a_2021} present in the cosmos one can still estimate the arrival directions of these \glspl{CR} with the help of a good pointing resolution and an understanding of these magnetic fields. The pointing resolution depends on the detector and the Pierre Auger Observatory already has an excellent pointing accuracy of $\sim 0.7^{\circ}$~\cite{BONIFAZI200920}. The magnetic fields on the other hand are complicated to deduce and model. However, this lack of knowledge can be ignored by just looking at \glspl{CR} of high energies since the expected deflections for such \glspl{CR} are expected to be small. At the Pierre Auger Observatory the arrival directions of more than 2,600 \glspl{CR} above 32EeV were estimated and analysed to look for potential sources of these \glspl{CR}~\cite{Abreu_2022}. The most significant result from this study is shown in Fig.~\ref{fig:CR-anisotropy}. The figure clearly shows the presence of anisotropies which are deviations from uniformity across the sky. The anisotropies are also pointed away from the Galactic centre indicating that the \glspl{UHECR} have an extragalactic origin. The hypothesis is further confirmed by the increase in anisotropy with energy shown in~\cite{Abreu_2022}. The presence of these anisotropies not far from the Galactic spiral arm as seen in Fig.~\ref{fig:CR-anisotropy} also gives further proof of an extragalactic origin of these \glspl{UHECR}. Further, for low energies E> 0.03 EeV studies looking at large scale structures such as dipolar flux modulation in~\cite{Aab_2020_dipole_modulation} also show a shift of the anisotropy dipole more towards the galactic centre with decreasing energy with a significance of $\sim 6 \sigma$. This can again be interpreted as a transition in CR sources from Galactic to extragalactic component. Even though this result is corroborated by the measurements done by KASCADE-Grande, IceCube and IceTop due to the decrease in sensitivity of the Pierre Auger experiment for these energies the result is not conclusive yet.
 
 Some proposed sources for these \glspl{UHECR} due to observations of excess \glspl{UHECR} in their surrounding regions by the Pierre Auger Observatory are presented in~\cite{TelescopeArray:2021gxg}. These include the Centaurus A region ($\sim 4\sigma$ significance), starburst galaxies ($\sim 3.8\sigma$) such as NGC4945, M83 and NGC253. The \gls{TA} has also found an excess close to the Perseus-Pisces supercluster with a significance of $\sim3.0-3.2\sigma$. However, this is still unconfirmed by the Pierre Auger Observatory which can also partly observe supercluster and remains a topic of discussion. With the continued data taking and upgrade of the Pierre Auger Observatory, the excess in the Centaurus A region is expected to reach a significance of 5$\sigma$  by 2025 which could make it the first steady source of \glspl{UHECR} ever observed. 
  
@@ -174,7 +174,7 @@ Some proposed sources for these \glspl{UHECR} due to observations of excess \gls
 The scenarios for the production and propagation of \glspl{CR} discussed above also predict the production of other messengers such as photons, neutrinos and neutrons. Neutrons and photons are discussed in this section and neutrinos are discussed in the next. 
 Neutrons being neutral and thus not affected by the magnetic fields of the Universe during their propagation can be useful for arrival direction studies. They are expected to be produced at the CR source via photo-pion production or other nuclear reactions near the sources. One such e.g. is a collision between an ultra-high energy proton to an ambient proton/photon. Although, neutrons can lose a significant amount of their acquired energy very quickly via $\beta$ decay (mean lifetime$\sim$879\,s)~\cite{ParticleDataGroup:2024cfk} in the ultra-relativistic regime neutrons originated in our Galaxy can still make it to Earth. At Auger, a neutron produces a non-distinguishable EAS as compared to a proton. Hence, only a source catalogue correlated search can be performed at the Pierre Auger Observatory. The results of such a search are given in~\cite{PierreAuger:2023onx}. No neutron like events have been found at Auger, but these results have already helped constrain some theorized production mechanisms for \glspl{CR}. Future searches looking at transient or short-lived sources for neutrons are currently underway. 
 
-Photons again offer another window to look into the origin, propagation and sources of the \glspl*{CR}. They can either be produced via interactions of \glspl*{CR} with matter or radiation fields or during propagation through interactions with the \gls*{CMB} as mentioned in sec.~\ref{subsec:crprop}. They, along with neutrinos, can also help constrain various top-down scenarios and help paint a more complete picture of the CR landscape. Observations for high energy photons have been carried out by specialized experiments such as ground-based Cherenkov telescopes like the \gls{HESS}~\cite{Puhlhofer:2024fjx}, Fermi Gamma-ray Space Telescope~\cite{Thompson_2022}, and the upcoming \gls{CTA}~\cite{2018_CTAO}. The Pierre Auger Observatory can also contribute to this search in the ultra-high energy regime by looking for photon-induced EAS. Such EASs are expected to be different from the ones induced by \glspl{CR} as they have a larger electromagnetic component and a rather small hadronic component. A more detailed description of the signature is provided in~\cite{universe8110579}. 
+Photons again offer another window to look into the origin, propagation and sources of the \glspl*{CR}. They can either be produced via interactions of \glspl*{CR} with matter or radiation fields or during propagation through interactions with the \gls*{CMB} as mentioned in section~\ref{subsec:crprop}. They, along with neutrinos, can also help constrain various top-down scenarios and help paint a more complete picture of the CR landscape. Observations for high energy photons have been carried out by specialized experiments such as ground-based Cherenkov telescopes like the \gls{HESS}~\cite{Puhlhofer:2024fjx}, Fermi Gamma-ray Space Telescope~\cite{Thompson_2022}, and the upcoming \gls{CTA}~\cite{2018_CTAO}. The Pierre Auger Observatory can also contribute to this search in the ultra-high energy regime by looking for photon-induced EAS. Such EASs are expected to be different from the ones induced by \glspl{CR} as they have a larger electromagnetic component and a rather small hadronic component. A more detailed description of the signature is provided in~\cite{universe8110579}. 
 
 \begin{figure}[t!]
   \centering
@@ -183,7 +183,7 @@ Photons again offer another window to look into the origin, propagation and sour
   \label{fig:Auger-Photon-limits}
 \end{figure}
 
-Summary of the results of photon searches performed at the Pierre Auger Observatory is presented in fig~\ref{fig:Auger-Photon-limits} together with the predicted flux from some popular production models. Due to the non-observance of photon-like events at Auger, the collaboration has set some of the stringiest limits for expected photon flux at high energies. This has already helped constrain some top-down scenarios ultimately leading to a much better understanding of the origin of \glspl{UHECR}. Further, searches will also help constrain the mystery of the cutoff. UHE photon searches are also very useful for a multimessenger approach to astronomy and these contributions are discussed more in section~\ref{sec:Mul-mes}.
+Summary of the results of photon searches performed at the Pierre Auger Observatory is presented in Fig.~\ref{fig:Auger-Photon-limits} together with the predicted flux from some popular production models. Due to the non-observance of photon-like events at Auger, the collaboration has set some of the stringiest limits for expected photon flux at high energies. This has already helped constrain some top-down scenarios ultimately leading to a much better understanding of the origin of \glspl{UHECR}. Further, searches will also help constrain the mystery of the cutoff. UHE photon searches are also very useful for a multimessenger approach to astronomy and these contributions are discussed more in section~\ref{sec:Mul-mes}.
 
 
 \section{Ultra High Energy Neutrinos}
@@ -239,7 +239,7 @@ Other interactions such as beta decay of neutrons and nuclei ($n \longrightarrow
   \label{fig:Oscillation_ternary}
 \end{figure}
 
-where $U_{\alpha i}$ is the mixing matrix formulated by Pontecorvo-Maki-Nakagawa-Sakata~\cite{Pontecorvo:1957qd,10.1143/PTP.28.870}. In a standard case where three neutrino flavors are considered this matrix is a 3x3 matrix parameterized by the three mixing angles ($\theta_{12},\theta_{23},\theta_{13}$) and a single phase called $\delta_{\text{CP}}$. Starting from the expected source flavor ratio one can calculate the flavor ratio at Earth by knowing the above four mentioned parameters. One example of such propagation is shown in fig.~\ref{fig:Oscillation_ternary}. Since high energy tau neutrinos are not expected to be present in the atmospheric neutrino background the detection of such neutrinos at Earth could be an indication that the neutrino had an astrophysical origin. 
+where $U_{\alpha i}$ is the mixing matrix formulated by Pontecorvo-Maki-Nakagawa-Sakata~\cite{Pontecorvo:1957qd,10.1143/PTP.28.870}. In a standard case where three neutrino flavors are considered this matrix is a 3x3 matrix parameterized by the three mixing angles ($\theta_{12},\theta_{23},\theta_{13}$) and a single phase called $\delta_{\text{CP}}$. Starting from the expected source flavor ratio one can calculate the flavor ratio at Earth by knowing the above four mentioned parameters. One example of such propagation is shown in Fig.~\ref{fig:Oscillation_ternary}. Since high energy tau neutrinos are not expected to be present in the atmospheric neutrino background the detection of such neutrinos at Earth could be an indication that the neutrino had an astrophysical origin. 
 
 Another important aspect to fully understand the origin and propagation of astrophysical neutrinos is determining their expected energies. On average the energy fraction that pions can get from the \gls*{CR} nucleons is about 20\%. These relativistic pions can then further pass on between $\sim$20-26\% depending on the flavor and type of the neutrino. Approximately, the Energy fraction for the produced neutrinos concerning the gamma and Nucleon is~\cite{Lipari_2007}:
 \begin{equation}
@@ -260,7 +260,7 @@ Depending on the type of source and how far the said source is one can calculate
 
 Cosmogenic neutrinos are produced either as a consequence of the \gls{GZK} mechanism discussed in section~\ref{subsubsec:GZK} or due to the interactions of \glspl{UHECR} with \gls{EBL}. They were first suggested by Berezinsky and Zatsepin in 1969~\cite{Berezinsky:1970xj}. The processes involved are similar to those for astrophysical neutrinos albeit the proton/nuclei interact with the CMB/EBL photon instead of the photons from the radiation fields. The two main processes are the same as that for the GZK mechanism i.e. decay of charged pions produced in photo-pion production, eq.~\ref{eq:GZK} and the beta decay of neutrons and nuclei produced in photo-disintegration, eq.~\ref{eq:Pdisinteg}. \gls{CMB} mainly affects the protons~\cite{Ehlert_2024} during their propagation which form a large fraction of the \glspl{UHECR} traversing the universe while the EBL plays an important role in the case of other nuclei~\cite{Aloisio_2015}. 
 Since the processes are the same, the flavor flux expectations at Earth remain the same. However, the expected energies that the cosmogenic neutrinos can acquire differ drastically as compared to astrophysical neutrinos. The energy of neutrinos produced due to interactions with \gls*{CMB} in the case of photo-pion production is of the order of $10^{18}$eV while for the ones produced via the by-products (pions or neutrons) of photo-disintegration, it is of the order of $10^{16}$eV~\cite{Aloisio_2015}. In the case of interactions with \gls*{EBL}, this lowers to about $10^{15}$eV and $10^{14}$eV for the two types of interactions. 
-The exact properties of the neutrinos produced are directly dependent on the parent \glspl*{UHECR} that produce them. The properties of \glspl{UHECR} such as the total flux, composition, maximum energies, production spectrum at the sources and their cosmological evolution (adiabatic losses) are all crucial factors that affect the  secondary cosmogenic neutrinos produced by these \glspl*{UHECR}. A collection of some examples of the expected cosmogenic neutrino fluxes for different scenarios can be found in ~\cite{KAMPERT2012660,AlvesBatista:2018zui,Heinze:2019jou}. One example are shown in fig~\ref{fig:model_nu_auger_mixed}. The two distinct humps are due to the two associated production processes with the lower one being due to the neutrinos produced in beta decay of neutrons and nuclei produced by photo-disintegration. 
+The exact properties of the neutrinos produced are directly dependent on the parent \glspl*{UHECR} that produce them. The properties of \glspl{UHECR} such as the total flux, composition, maximum energies, production spectrum at the sources and their cosmological evolution (adiabatic losses) are all crucial factors that affect the  secondary cosmogenic neutrinos produced by these \glspl*{UHECR}. A collection of some examples of the expected cosmogenic neutrino fluxes for different scenarios can be found in ~\cite{KAMPERT2012660,AlvesBatista:2018zui,Heinze:2019jou}. One example are shown in Fig.~\ref{fig:model_nu_auger_mixed}. The two distinct humps are due to the two associated production processes with the lower one being due to the neutrinos produced in beta decay of neutrons and nuclei produced by photo-disintegration. 
 
 Measurements of \gls*{CR} detection observatories such as the Pierre Auger Observatory can also be used to calculate an expected neutrino spectrum based on assumptions on the composition and the cosmological evolution of the sources. Neutrinos thus can act as a very important tool in constraining the composition of the incoming \glspl*{UHECR} and furthering their actual sources. They can also help to solve the question of the cutoff observed in the \gls*{UHECR} spectrum whether this is due to the \gls*{GZK} mechanism (proton-dominated composition) or sources reaching their maximum potential as theorized by Hillas (mixed composition). The current results regarding this important study are discussed in section~\ref{subsec:Nuresults}
 
@@ -279,9 +279,9 @@ The low interaction cross-section ($\sigma_{\nu}$)~\cite{Formaggio_2012} of neut
 \begin{subequations}\label{eq:NuCC_NC}
   \begin{align}
     \begin{split}
-      \nu_l \, (\bar{\nu_l}) + N &\mathop{\longrightarrow}^{\mathrm{CC}} l^-(l^+) + X 
+      \nu_l \, (\bar{\nu_l}) + N &\mathop{\longrightarrow}^{\mathrm{CC}} l^- \, (l^+) + X 
     \end{split} \\
-    \nu_l \, (\bar{\nu_l}) + N &\mathop{\longrightarrow}^{\mathrm{NC}} \nu_l(\bar{\nu_l}) + X
+    \nu_l \, (\bar{\nu_l}) + N &\mathop{\longrightarrow}^{\mathrm{NC}} \nu_l \, (\bar{\nu_l}) + X
   \end{align}
 \end{subequations}
 
@@ -333,7 +333,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 
   \paragraph*{Spectrum}
   \label{subsubsec:Nuspectrum}
-  After the measurements of astrophysical neutrinos at the IceCube Neutrino Observatory, the first plot and estimation of flux has been possible for high-energy neutrinos. The flux spectrum as measured by IceCube and other experiments is shown in fig~\ref{fig:Nu_flux_measurement}. The flux was first published in 2013~\cite{Aartsen_2014_first_flux} and has since been refined with various analyses~\cite{PhysRevD.110.022001}. The plot also shows the summary of the currently published analysis along with current best upper limits for cosmogenic neutrino flux. The diffuse flux spectrum agrees across the various analyses within the overlapping energy regions. However, there is a slight tension between the estimate of the spectral index which is obtained after fitting the flux spectrum. The measurements are also not enough to decide on the nature of the flux across the whole energy range and more measurements in the future would help understand the neutrino spectrum in more detail. 
+  After the measurements of astrophysical neutrinos at the IceCube Neutrino Observatory, the first plot and estimation of flux has been possible for high-energy neutrinos. The flux spectrum as measured by IceCube and other experiments is shown in Fig.~\ref{fig:Nu_flux_measurement}. The flux was first published in 2013~\cite{Aartsen_2014_first_flux} and has since been refined with various analyses~\cite{PhysRevD.110.022001}. The plot also shows the summary of the currently published analysis along with current best upper limits for cosmogenic neutrino flux. The diffuse flux spectrum agrees across the various analyses within the overlapping energy regions. However, there is a slight tension between the estimate of the spectral index which is obtained after fitting the flux spectrum. The measurements are also not enough to decide on the nature of the flux across the whole energy range and more measurements in the future would help understand the neutrino spectrum in more detail. 
 
   \paragraph*{Sources}
   \label{subsubsec:Nusources}
@@ -346,7 +346,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
     \label{fig:NGC1068_excess}
   \end{figure}
 
-  Since neutrinos arrive at Earth pointing directly back to their source, plotting the candidate astrophysical neutrino events measured by the neutrino telescopes over a sky map can localize their sources of origin. Such studies have been performed by various neutrino telescopes such as ANTARES~\cite{Albert_2021}, AMANDA~\cite{Abbasi_2009_Amanda}, BAIKAL-GVD~\cite{Allakhverdyan_2023} and IceCube~\cite{Icecube_2022}. Only IceCube has found the most significant excess of 81 events in the TeV range, arriving from the region within 0.18 degrees of active galaxy NGC1068 (M77). The fig~\ref{fig:NGC1068_excess} taken from~\cite{Icecube_2022} shows the hottest spot along with the excess. The association of the observation to the particular source has a significance of $4.2\sigma$. Hosting an active AGN surrounded by a dust torus makes it one of the ideal candidates for neutrino production~\cite{eichler1979high,berezinsky1981high}. The same analysis has also pointed out other potential neutrino source candidates PKS 1424+240 and TXS 0506+056. The latter of these is also important in the context of multi-messenger physics and is discussed later. 
+  Since neutrinos arrive at Earth pointing directly back to their source, plotting the candidate astrophysical neutrino events measured by the neutrino telescopes over a sky map can localize their sources of origin. Such studies have been performed by various neutrino telescopes such as ANTARES~\cite{Albert_2021}, AMANDA~\cite{Abbasi_2009_Amanda}, BAIKAL-GVD~\cite{Allakhverdyan_2023} and IceCube~\cite{Icecube_2022}. Only IceCube has found the most significant excess of 81 events in the TeV range, arriving from the region within 0.18 degrees of active galaxy NGC1068 (M77). The Fig.~\ref{fig:NGC1068_excess} taken from~\cite{Icecube_2022} shows the hottest spot along with the excess. The association of the observation to the particular source has a significance of $4.2\sigma$. Hosting an active AGN surrounded by a dust torus makes it one of the ideal candidates for neutrino production~\cite{eichler1979high,berezinsky1981high}. The same analysis has also pointed out other potential neutrino source candidates PKS 1424+240 and TXS 0506+056. The latter of these is also important in the context of multi-messenger physics and is discussed later. 
 
   \begin{figure}[t!]
     \centering
@@ -355,13 +355,13 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
     \label{fig:Galactic_plane_nu_messengers}
   \end{figure}
 
-  In 2023, IceCube also published the first observation of diffuse emission of high-energy neutrinos from the galactic plane of our own galaxy, the Milky Way~\cite{Galactic_plane_nu_2023}. The result is at the 4.5$\sigma$ level of significance when compared to a background-only hypothesis. However, the signal could also be due to a population of unresolved point sources near the galactic plane. This observation has opened a new way to observe our Milky Way galaxy and offers an evidence based proof confirming our understanding of both \gls{CR} and neutrino physics. It also opens a new avenue for the application of multi-messenger astronomy. The fig~\ref{fig:Galactic_plane_nu_messengers} shows the plane of the Milky Way galaxy as seen by different messengers.
+  In 2023, IceCube also published the first observation of diffuse emission of high-energy neutrinos from the galactic plane of our own galaxy, the Milky Way~\cite{Galactic_plane_nu_2023}. The result is at the 4.5$\sigma$ level of significance when compared to a background-only hypothesis. However, the signal could also be due to a population of unresolved point sources near the galactic plane. This observation has opened a new way to observe our Milky Way galaxy and offers an evidence based proof confirming our understanding of both \gls{CR} and neutrino physics. It also opens a new avenue for the application of multi-messenger astronomy. The Fig.~\ref{fig:Galactic_plane_nu_messengers} shows the plane of the Milky Way galaxy as seen by different messengers.
   
 \subsubsection*{Cosmogenic Neutrinos}
 
   \paragraph{Limits}
   \label{subsubsec:CosmoNuLimits}
-  Both the Pierre Auger Observatory and the IceCube neutrino Observatory have also performed searches to look for UHE$\nu$s which have a cosmogenic origin. These searches have led to some of the most stringent upper limits for such fluxes. These limits are shown in fig~\ref{fig:Nu_limits_auger}. The results from the Pierre Auger Observatory dominate for energies above $10^{18}$eV and for lower energies, IceCube provides the best limits. The lack of observations can help constrain various models for high-energy neutrino production. These results can also help better our understanding of \gls{CR} physics and in particular their composition. The lack of observation of the expected neutrino flux predicted by a pure proton composition scenario for \glspl{CR} is an important result in favour of mixed composition scenarios. This result further points towards the spectrum cutoff being more likely due to a maximum rigidity limit for the sources rather than a GZK limitation. The detection of cosmogenic neutrinos can help complete the picture of the neutrino and \gls{CR} sky. 
+  Both the Pierre Auger Observatory and the IceCube neutrino Observatory have also performed searches to look for UHE$\nu$s which have a cosmogenic origin. These searches have led to some of the most stringent upper limits for such fluxes. These limits are shown in Fig.~\ref{fig:Nu_limits_auger}. The results from the Pierre Auger Observatory dominate for energies above $10^{18}$eV and for lower energies, IceCube provides the best limits. The lack of observations can help constrain various models for high-energy neutrino production. These results can also help better our understanding of \gls{CR} physics and in particular their composition. The lack of observation of the expected neutrino flux predicted by a pure proton composition scenario for \glspl{CR} is an important result in favour of mixed composition scenarios. This result further points towards the spectrum cutoff being more likely due to a maximum rigidity limit for the sources rather than a GZK limitation. The detection of cosmogenic neutrinos can help complete the picture of the neutrino and \gls{CR} sky. 
 
 \begin{figure}[t!]
   \centering
