--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -41,7 +41,7 @@ To understand the cascade of particles a detailed modelling of each component is
 
 Proposed by Heitler in 1954~\cite{heitler1984quantum}, Heitler's Toy Model is a simplified perfect binary tree to understand and model an EAS development. The model characterizes an EAS as a perfect binary tree. In such a scenario all particles produced in a shower equally share the primary energy available at the time of their creation. At each step, which has a fixed size related to the radiation length of the medium $\lambda$, the number of particles are supposed to be doubled, with each having the same energy. The energy losses which may occur due to collisions are completely ignored. The shower development or splitting process is supposed to continue until a critical point where the energy required to create more particles becomes the same as energy lost by particles in the medium. At the critical point, the shower has the maximum number of particles given by, $N_{\text{max}} = E_0/E_c$, which is the ratio of the original energy ($E_0$) to the critical energy ($E_c \sim 87$MeV). After this point the shower keeps getting absorbed in the atmosphere. The penetration depth at this point is called the shower maximum denoted by $X_{\text{max}}$. This can be calculated to be $X_{\text{max}} = X_0 + \lambda_r \ln(E_0/E_c)$ where $X_0$ is the first interaction point in the atmosphere. A visualization of the shower development according to the Heitler's model is shown in Fig.~\ref{fig:EAS_toy_model}.
 
-Such a simplified model works quite well for estimating the properties of the electromagnetic cascades although the $N_{\text{max}}$ estimations do not match perfectly. The reason for this is the difference in the energy loss values for electrons and photons. For hadronic cascades an extension to the model was made. Other important properties of the shower such as lateral and longitudinal spread, also require taking into account the emittance direction and losses due to collision which are not taken into account for a simplified model. These are discussed in sec.~\ref{sec:EAS_cha}. Even with its shortcomings the Heitler model gives a very good estimation for electromagnetic cascades and helps clearly categorize an air shower into three phases, the growth phase, the critical point phase and the tail phase. 
+Such a simplified model works quite well for estimating the properties of the electromagnetic cascades although the $N_{\text{max}}$ estimations do not match perfectly. The reason for this is the difference in the energy loss values for electrons and photons. For hadronic cascades an extension to the model was made. Other important properties of the shower such as lateral and longitudinal spread, also require taking into account the emittance direction and losses due to collision which are not taken into account for a simplified model. These are discussed in section~\ref{sec:EAS_cha}. Even with its shortcomings the Heitler model gives a very good estimation for electromagnetic cascades and helps clearly categorize an air shower into three phases, the growth phase, the critical point phase and the tail phase. 
 
 \subsection{Hadronic Extension}
 \label{sec:Dev_Had}
