--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -48,7 +48,7 @@ The Fluorescence Detector system at the Pierre Auger Observatory consists of an 
   \label{fig:FD_sketch_schematic}
 \end{figure}
 
-Fig~\ref{fig:FD_sketch_schematic} shows an FD site along with the schematic of an FD telescope. The fluorescence light enters through the UV filtered window 
+Fig.~\ref{fig:FD_sketch_schematic} shows an FD site along with the schematic of an FD telescope. The fluorescence light enters through the UV filtered window 
 which is surrounded by a corrector ring. A spherical segmented mirror is used to gather the incoming light and focus it onto a 440 pixeled PMT camera. The camera records the light pulses every 100ns and based on a hierarchical trigger~\cite{Abraham_2010_FD} saves the event. For reconstructing the energy and the geometry of the shower the recorded information is combined with the information detected by the SD (hybrid) or other FD telescopes (stereo)~\cite{SALAMIDA2008207}. A relative calibration of the PMTs is performed for each camera before and after each night of data taking~\cite{Abraham_2010_FD}. A regular absolute calibration procedure called the X-Y scanner has also been developed and is currently being deployed at each FD telescope. 
 
 The FD acts as an important calibration tool for the SD, especially for the energy estimation where the hybrid detection of EAS is used to provide a simulation free primary energy estimate for the SD. It can also be useful for looking into high energy atmospheric phenomena such as ELVES ~\cite{PierreAuger:2020lri}. The low duty cycle of the FD which is due to its operation being limited to clear moonless nights, limits its overall capabilities, especially for a neutrino analysis. However, the FD has been used for up-going neutrino searches (publication under review) and also has a potential use to look for atmosphere skimming CRs or neutrinos.  
@@ -87,7 +87,7 @@ To perform the calibration charge distribution, $Q_{\text{VEM}}^{\text{peak}}$, 
 
 \subsection{SD Trigger system}
 \label{sec:Sur_det_trig}
-A schematic of the logic of the trigger system is shown in fig~\ref{fig:SD_trigger_logic}. There are three types of different types of station level triggers scalar, calibration and shower trigger. The scalar trigger records signals for very low thresholds and is useful for supplementary physics such as space weather~\cite{Dasso:2012vk}. The calibration trigger, as explained in the previous section, helps store and calculate the calibration parameters. The main shower trigger, used to record the EAS events is a hierarchical system consisting of two local triggers (T1 and T2) implemented at the station level, a third level trigger (T3) implemented by CDAS and further event selection triggers (T4 and T5) stored by the SD but only used depending on the analysis and the quality of data required by the said analysis. The hierarchical nature arises from the limits on the wireless communication network required for a vast autonomous array. The T3 trigger aims to reduce the rate especially for the expected muonic background and at the same time maximising the EAS event detection.  
+A schematic of the logic of the trigger system is shown in Fig.~\ref{fig:SD_trigger_logic}. There are three types of different types of station level triggers scalar, calibration and shower trigger. The scalar trigger records signals for very low thresholds and is useful for supplementary physics such as space weather~\cite{Dasso:2012vk}. The calibration trigger, as explained in the previous section, helps store and calculate the calibration parameters. The main shower trigger, used to record the EAS events is a hierarchical system consisting of two local triggers (T1 and T2) implemented at the station level, a third level trigger (T3) implemented by CDAS and further event selection triggers (T4 and T5) stored by the SD but only used depending on the analysis and the quality of data required by the said analysis. The hierarchical nature arises from the limits on the wireless communication network required for a vast autonomous array. The T3 trigger aims to reduce the rate especially for the expected muonic background and at the same time maximising the EAS event detection.  
 
 \begin{figure}[h!]
   \centering
@@ -213,7 +213,7 @@ The T3 level aims to build a condition based on both spatial and temporal combin
 
 The next two triggers T4 and T5 are used to improve the data quality. Unlike T1-T3 these are implemented offline. Both check for the geometry and the timing compatibility to select showers in the T3 events. The T4 trigger uses either of the two different criteria to select showers. The first is the requirement of a 3-ToT compact configuration i.e. three nearby stations satisfying the T2-ToT condition in triangular patterns shown in green in Fig.~\ref{fig:T4_config}. The second criterion, 4C1 requires the main triggered station to have at least three triggered tanks out of its six first neighbours as shown in blue in Fig.~\ref{fig:T4_config}. Both the criteria work in collaboration with each other, 3ToT configuration has a selection efficiency of $\sim$99\% for showers below $60^{\circ}$ and the 4C1 configuration helps to recover the rest $\sim$1\% showers lost below $60^{\circ}$ and also selects low energy events above $60^{\circ}$. This trigger is not used for the neutrino analysis.
 
-The T5 fiducial triggers help improve the quality of the showers selected, especially for an accurate energy and angular reconstruction. The trigger ensures the selection of showers that are well contained in the detector array to avoid miss-reconstruction of the core. There are two severity levels for the triggers called 6T5 and 5T5 as shown in fig.~\ref{fig:T5_config}. The former requires all six stations in the first crown around the station with the highest signal to be functional while the latter only requires five. The 6T5 condition helps negate the showers that might fall at any hole in the detector array. These holes can be due to natural obstacles or non-functional tanks. Since 6T5 also improves the angular resolution and improves the overall quality of the selected showers this criterion is used in the search for neutrinos, especially for angles below $75^{\circ}$. Above $75^{\circ}$ since most of the events expected are elongated along a single line the fulfilment of the T5 criteria is very difficult, thus this trigger is not used. 
+The T5 fiducial triggers help improve the quality of the showers selected, especially for an accurate energy and angular reconstruction. The trigger ensures the selection of showers that are well contained in the detector array to avoid miss-reconstruction of the core. There are two severity levels for the triggers called 6T5 and 5T5 as shown in Fig.~\ref{fig:T5_config}. The former requires all six stations in the first crown around the station with the highest signal to be functional while the latter only requires five. The 6T5 condition helps negate the showers that might fall at any hole in the detector array. These holes can be due to natural obstacles or non-functional tanks. Since 6T5 also improves the angular resolution and improves the overall quality of the selected showers this criterion is used in the search for neutrinos, especially for angles below $75^{\circ}$. Above $75^{\circ}$ since most of the events expected are elongated along a single line the fulfilment of the T5 criteria is very difficult, thus this trigger is not used. 
 
 \section{AugerPrime}
 \label{sec:Aug_prime}
