--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -21,16 +21,16 @@ Exposure refers to the effective observation capability of a detector or observa
   \label{fig:Brillouin_area}
 \end{figure}
 
-In this analysis, a different approach based on the 6T5 condition, which is required for each selected event in this analysis, is used for the exposure calculation. For this calculation, the 6T5 hexagon is taken to be the smallest possible detection unit for the $\nu$ event. The effective area i.e. the area seen by the incident cosmic neutrino for this detection unit at full efficiency is given by the Brillouin area~\cite{PierreAuger:2010zof}, $A_{6T5} = 1.95\,\mathrm{km}^2$ as shown by the shaded area in fig~\ref{fig:Brillouin_area}. The aperture for this detector unit is dependent on the energy of the primary neutrino, the slant depth in the atmosphere of the first interaction, X, neutrino flavor (cross-section), type of the interaction (CC or NC), zenith angle, azimuth angle and the point of impact of the shower on the ground. The effective \textit{acceptance} of the detector unit can be written as follows:
+In this analysis, a different approach based on the 6T5 condition, which is required for each selected event in this analysis, is used for the exposure calculation. For this calculation, the 6T5 hexagon is taken to be the smallest possible detection unit for the $\nu$ event. The effective area i.e. the area seen by the incident cosmic neutrino for this detection unit at full efficiency is given by the Brillouin area~\cite{PierreAuger:2010zof}, $A_{6T5} = 1.95\,\mathrm{km}^2$ as shown by the shaded area in Fig.~\ref{fig:Brillouin_area}. The aperture for this detector unit is dependent on the energy of the primary neutrino, the slant depth in the atmosphere of the first interaction, X, neutrino flavor (cross-section), type of the interaction (CC or NC), zenith angle, azimuth angle and the point of impact of the shower on the ground. The effective \textit{acceptance} of the detector unit can be written as follows:
 
 \begin{equation}
   \label{eq:nu_accep}
   A_{hex}(E_{\nu}, X)  = \int^{\phi = 2\pi}_{\phi = 0} \,d\phi \int_{\theta_{min} = 58.5^{\circ}}^{\theta_{max}= 76.5^{\circ}}  \, A_{6T5} \cdot \varepsilon(E_{\nu}, X, \theta) \cdot \sin \theta \, \cos \theta \cdot d\theta, \quad   \mathrm{[cm^2 sr]}
 \end{equation}
 
-where $\varepsilon(E_{\nu}, X, \theta)$ is the neutrino detection efficiency for each simulated energy, slant depth and zenith discussed in the last chapter. An example for a particular combination is given in fig.~\ref{fig:Eff_X_comp} in the last chapter. Plots for efficiency for each combination can be found as part of the git repository made available for this analysis.
+where $\varepsilon(E_{\nu}, X, \theta)$ is the neutrino detection efficiency for each simulated energy, slant depth and zenith discussed in the last chapter. An example for a particular combination is given in Fig.~\ref{fig:Eff_X_comp} in the last chapter. Plots for efficiency for each combination can be found as part of the git repository made available for this analysis.
 
-The next step involves integrating the \textit{acceptance} over the different simulated injected slant depths (as given in table~\ref{tab:Simulation_params}). This accounts for the \textit{effective mass} target for the neutrino identification over the 6T5 hexagon unit. It is calculated as follows: 
+The next step involves integrating the \textit{acceptance} over the different simulated injected slant depths (as given in Tab.~\ref{tab:Simulation_params}). This accounts for the \textit{effective mass} target for the neutrino identification over the 6T5 hexagon unit. It is calculated as follows: 
 
 \begin{equation}
   \label{eq:nu_eff_mass}
@@ -51,7 +51,7 @@ Exposure calculation still needs to account for the detector configuration and i
   \xi^{i,c}(E_{\nu}) = \frac{\sigma^{i,c}(E_{\nu})}{m_N} \int_{t} M_{\text{hex}}^{i,c}(E_{\nu}) \cdot n_{\text{hex}}(t) \cdot dt =  \frac{\sigma^{i,c}(E_{\nu})}{m_N} \cdot M_{\text{hex}}^{i,c}(E_{\nu}) \cdot N_{\text{hex}},
 \end{equation}
 
-$\sigma^{i,c}(E_{\nu})$ is the neutrino nucleon cross-section taken from~\cite{Cooper-Sarkar:2011jtt} and $N_{hex}$ is the total number of active 6T5 hexagons integrated in time over the search period. The value for $N_{hex}$ calculated for the period analysed is 2.8 $\times 10^{11}$ which is about $\sim$6.75 equivalent years of a fully functional SD array. The energy dependent exposure for different flavors and interaction channels is shown in fig~\ref{fig:Exp_flavors_comp}. It is necessary to point out again that the double bang showers which can be produced by $\nu_{tau}$ are not taken into account for this analysis which was also mentioned in sec.~\ref{sec:sim_DGL} 
+$\sigma^{i,c}(E_{\nu})$ is the neutrino nucleon cross-section taken from~\cite{Cooper-Sarkar:2011jtt} and $N_{hex}$ is the total number of active 6T5 hexagons integrated in time over the search period. The value for $N_{hex}$ calculated for the period analysed is 2.8 $\times 10^{11}$ which is about $\sim$6.75 equivalent years of a fully functional SD array. The energy dependent exposure for different flavors and interaction channels is shown in Fig.~\ref{fig:Exp_flavors_comp}. It is necessary to point out again that the double bang showers which can be produced by $\nu_{tau}$ are not taken into account for this analysis which was also mentioned in section~\ref{sec:sim_DGL} 
 
 \begin{figure}[t!]
   \centering
@@ -60,7 +60,7 @@ $\sigma^{i,c}(E_{\nu})$ is the neutrino nucleon cross-section taken from~\cite{C
   \label{fig:Exp_flavors_comp}
 \end{figure}
 
-An effective or total exposure, $\xi_{tot}(E_{\nu}) = \sum_{i}\sum_{c} \xi^{i,c}(E_{\nu})$ is calculated by summing all the interaction channels and assuming a 1:1:1 flavour ration at earth (large propagation distances combined with neutrino oscillations) as shown by the red line in fig~\ref{fig:Exp_total_comp}. 
+An effective or total exposure, $\xi_{tot}(E_{\nu}) = \sum_{i}\sum_{c} \xi^{i,c}(E_{\nu})$ is calculated by summing all the interaction channels and assuming a 1:1:1 flavour ration at earth (large propagation distances combined with neutrino oscillations) as shown by the red line in Fig.~\ref{fig:Exp_total_comp}. 
 
 \begin{figure}[t!]
   \centering
@@ -69,9 +69,9 @@ An effective or total exposure, $\xi_{tot}(E_{\nu}) = \sum_{i}\sum_{c} \xi^{i,c}
   \label{fig:Exp_total_comp}
 \end{figure}
 
-As seen in the figure the $\nu_e$ CC channels contributes the most to the total neutrino exposure ($\sim$85\%). The exposure rises rapidly at lower energies and then mostly flattens with just a slight increase which is due to the energy dependent neutrino cross-section. The shape is due to the neutrino detection efficiency which is small for lower energies as shown in fig~\ref{fig:Eff_v_theta_CC_E} in the last chapter. The next dominant channels are the $\nu_{\tau}$ and $\nu_{\mu}$ CC which are assumed to have a similar detection efficiency as the NC channel but have a higher value of cross-section. The NC channel contribution is not significant ($\sim$5\%) due to the reasons discussed in section~\ref{subsec:nu_sel_nudeteff}.  
+As seen in the figure the $\nu_e$ CC channels contributes the most to the total neutrino exposure ($\sim$85\%). The exposure rises rapidly at lower energies and then mostly flattens with just a slight increase which is due to the energy dependent neutrino cross-section. The shape is due to the neutrino detection efficiency which is small for lower energies as shown in Fig.~\ref{fig:Eff_v_theta_CC_E} in the last chapter. The next dominant channels are the $\nu_{\tau}$ and $\nu_{\mu}$ CC which are assumed to have a similar detection efficiency as the NC channel but have a higher value of cross-section. The NC channel contribution is not significant ($\sim$5\%) due to the reasons discussed in section~\ref{subsec:nu_sel_nudeteff}.  
 
-The exposure calculated this analysis is also compared to the one calculated using the previous analysis for the same time period in fig~\ref{fig:Exp_flavors_comp}. For the CC channel a $\sim 5 \times$ improvement is seen at lower energies and a $\sim 2\times$ improvement at higher energies. For NC this improvement is not that significant. There is a $2\times$ improvement at lower energies and a 1.5$\times$ improvement at higher energies. The improvement at lower energies is due to the inclusion of the new triggers MoPS and ToTd which enhance the detection efficiency at lower energies. The improvement at higher energies is mainly due to the improved Fisher analysis. Since the $\nu_e$ CC contribution to the total exposure is significantly higher than other channels, the overall improvement to the total exposure is only slightly less than the improvement to the $\nu_e$ CC channel. 
+The exposure calculated this analysis is also compared to the one calculated using the previous analysis for the same time period in Fig.~\ref{fig:Exp_flavors_comp}. For the CC channel a $\sim 5 \times$ improvement is seen at lower energies and a $\sim 2\times$ improvement at higher energies. For NC this improvement is not that significant. There is a $2\times$ improvement at lower energies and a 1.5$\times$ improvement at higher energies. The improvement at lower energies is due to the inclusion of the new triggers MoPS and ToTd which enhance the detection efficiency at lower energies. The improvement at higher energies is mainly due to the improved Fisher analysis. Since the $\nu_e$ CC contribution to the total exposure is significantly higher than other channels, the overall improvement to the total exposure is only slightly less than the improvement to the $\nu_e$ CC channel. 
 
 \section{Systematic uncertainties}
 \label{sec:det_uncert}
@@ -88,7 +88,7 @@ The sources of systematic uncertainties considered for this analysis are discuss
   \item \textbf{Neutrino cross-sections:} The systematic uncertainties due to the neutrino cross-sections were taken from~\cite{Cooper-Sarkar:2011jtt} which are of the order $\pm 7\%$.
 \end{description}
 
-Table ~\ref{tab:systematic_uncertainties} summarizes the  source of systematic uncertainties and their contribution to the total exposure. The total systematic uncertainties are calculated by adding them in quadrature. As discussed later in sec.~\ref{subsec:Conrad} the uncertainties are directly incorporated in the limit by applying the Conrad method~\cite{Conrad:2002kn} to calculate the confidence intervals. 
+Table~\ref{tab:systematic_uncertainties} summarizes the  source of systematic uncertainties and their contribution to the total exposure. The total systematic uncertainties are calculated by adding them in quadrature. As discussed later in section~\ref{subsec:Conrad} the uncertainties are directly incorporated in the limit by applying the Conrad method~\cite{Conrad:2002kn} to calculate the confidence intervals. 
 
 \begin{table}[h!]
   \centering
@@ -145,7 +145,7 @@ This section is thus split into two subsections. The first describing the unblin
 \subsection{Flawed 20\% test sample}
 \label{subsec:unblind_20}
 
-The Fisher value distribution for the test sample is shown in fig~\ref{fig:Fish_bkg_test_flawed}. As it is shown no event passes the Fisher cut in any angular region. However, there are a few events which come very close to the cut line. Five events marked with a red circle were analysed in more detail. Each of them has its own unique reason with only the one with zenith being the most interesting. This event has the SD Event ID of "66106356". After investigating the event in detail it was found that the accidental station cut used is insufficient. Previously, the  accidental cut (rejection of stations with Total signal < 3 VEM) is only applied to the event if there are more than 5 stations in the event. Since for this analysis due to the inclusion of MoPS and ToTd an overall increase in events is expected which also increases the overall number of stations with accidental stations this cut needs to be reduced a bit to take this overall increase into account. Thus, this cut was reduced to apply for events with more than 4 stations. This reduction of the cut decreases the total events passing the analysis cut by $\sim$5\% for the background training sample and $1-2$\% for the signal training sample. The Fisher coefficients and cut changes slightly. After this change in the reconstruction the test sample was obtained again and compared to the background sample as shown in fig~\ref{fig:Fish_bkg_test}. The other interesting events which have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ with their respective IDs are tabulated in table~\ref{tab:Interesting_events}. These events were individually evaluated. Some of these were found to have a bad time residual fit primarily because of multiple peaks observed in stations triggered by the new triggers. Since, no segmentation algorithm was used for stations with MoPS and ToTd triggers sometimes a wrong peak was selected which affected the reconstruction for these events. A future analysis with a corrected segmentation algorithm which is functional for the new triggers MoPS and ToTd is envisaged to upgrade this analysis. Such events are expected to be limited to less than $\sim$1\% of total events but still require a careful look for future analysis upgrades. A further detailed analysis where the primary mass composition is extracted via the muon production distributions as mentioned in~\cite{PierreAuger:2014zay} could not be performed for these events since the event had too few stations $\sim 4$ and the shower had a very low reconstructed energy both of which hinder the ability to extract any information about the primary. Such events were also seen in previous analysis albeit not these many. For the other events no particular feature worth mentioning was observed. Some figures with more information about the interesting events from this section are also included as a part of App.~\ref{sec:app_3}. 
+The Fisher value distribution for the test sample is shown in Fig.~\ref{fig:Fish_bkg_test_flawed}. As it is shown no event passes the Fisher cut in any angular region. However, there are a few events which come very close to the cut line. Five events marked with a red circle were analysed in more detail. Each of them has its own unique reason with only the one with zenith being the most interesting. This event has the SD Event ID of "66106356". After investigating the event in detail it was found that the accidental station cut used is insufficient. Previously, the  accidental cut (rejection of stations with Total signal < 3 VEM) is only applied to the event if there are more than 5 stations in the event. Since for this analysis due to the inclusion of MoPS and ToTd an overall increase in events is expected which also increases the overall number of stations with accidental stations this cut needs to be reduced a bit to take this overall increase into account. Thus, this cut was reduced to apply for events with more than 4 stations. This reduction of the cut decreases the total events passing the analysis cut by $\sim$5\% for the background training sample and $1-2$\% for the signal training sample. The Fisher coefficients and cut changes slightly. After this change in the reconstruction the test sample was obtained again and compared to the background sample as shown in Fig.~\ref{fig:Fish_bkg_test}. The other interesting events which have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ with their respective IDs are tabulated in Tab.~\ref{tab:Interesting_events}. These events were individually evaluated. Some of these were found to have a bad time residual fit primarily because of multiple peaks observed in stations triggered by the new triggers. Since, no segmentation algorithm was used for stations with MoPS and ToTd triggers sometimes a wrong peak was selected which affected the reconstruction for these events. A future analysis with a corrected segmentation algorithm which is functional for the new triggers MoPS and ToTd is envisaged to upgrade this analysis. Such events are expected to be limited to less than $\sim$1\% of total events but still require a careful look for future analysis upgrades. A further detailed analysis where the primary mass composition is extracted via the muon production distributions as mentioned in~\cite{PierreAuger:2014zay} could not be performed for these events since the event had too few stations $\sim 4$ and the shower had a very low reconstructed energy both of which hinder the ability to extract any information about the primary. Such events were also seen in previous analysis albeit not these many. For the other events no particular feature worth mentioning was observed. Some figures with more information about the interesting events from this section are also included as a part of App.~\ref{sec:app_3}. 
 
 
 
@@ -165,7 +165,7 @@ The Fisher value distribution for the test sample is shown in fig~\ref{fig:Fish_
 
 \subsection{Reevaluated 20\% test search sample and 60\% search sample}
 \label{subsec:unblind_60}
-After the errors discovered in the initial partial unblinding were fixed by altering the reconstruction the final unblinding was again performed in two stages. Initially a 20\% part was unblinded and then the remaining 60\% blinded sample was analysed. Again \textbf{0 neutrino candidates} were found after candidate selection. The Fisher value distributions as a function of reconstructed zenith angle for both the test and search samples are presented in fig~\ref{fig:Fish_bkg_test} and fig~\ref{fig:Fish_bkg_search} respectively. The results of the test sample (brown) and search sample (green) are overlaid over the background training sample (purple) in each plot with the dashed lines indicating the value of the $\mathcal{F}_{\text{cut}}$ obtained according to eq.~\ref{eq:fisher_poly_cut}. As it can be seen the distributions are compatible to each other within statistical fluctuations. The results of the unblinding for each angular sub-region for a combination of test and search samples is presented in fig~\ref{fig:Fisher_cut_2}. The distribution is scaled by the ratio of the integrals and the exponential fit is reevaluated again by comparing the Observed values to the predicted values from the fit. This comparison confirms that the exponential tail assumption is a reasonable enough to determine the $\mathcal{F}_{\text{cut}}$. The goodness of the fit is once against presented in tab.~\ref{tab:Cut_eval_unblind} in the form similar to table~\ref{tab:Cut_eval}. This time for the observed values the numbers are calculated from the much larger search sample. It is found that the tails of the distributions which typically seemed to have fit badly also fit reasonably well. The events in the search sample that have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ were again carefully checked and were found to be either due to the issues with the segmentation algorithm or known issues such as partial shower containment or large number of non-working PMTs both issues have also been seen in previous analysis. 
+After the errors discovered in the initial partial unblinding were fixed by altering the reconstruction the final unblinding was again performed in two stages. Initially a 20\% part was unblinded and then the remaining 60\% blinded sample was analysed. Again \textbf{0 neutrino candidates} were found after candidate selection. The Fisher value distributions as a function of reconstructed zenith angle for both the test and search samples are presented in Fig.~\ref{fig:Fish_bkg_test} and Fig.~\ref{fig:Fish_bkg_search} respectively. The results of the test sample (brown) and search sample (green) are overlaid over the background training sample (purple) in each plot with the dashed lines indicating the value of the $\mathcal{F}_{\text{cut}}$ obtained according to eq.~\ref{eq:fisher_poly_cut}. As it can be seen the distributions are compatible to each other within statistical fluctuations. The results of the unblinding for each angular sub-region for a combination of test and search samples is presented in Fig.~\ref{fig:Fisher_cut_2}. The distribution is scaled by the ratio of the integrals and the exponential fit is reevaluated again by comparing the Observed values to the predicted values from the fit. This comparison confirms that the exponential tail assumption is a reasonable enough to determine the $\mathcal{F}_{\text{cut}}$. The goodness of the fit is once against presented in Tab.~\ref{tab:Cut_eval_unblind} in the form similar to Tab.~\ref{tab:Cut_eval}. This time for the observed values the numbers are calculated from the much larger search sample. It is found that the tails of the distributions which typically seemed to have fit badly also fit reasonably well. The events in the search sample that have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ were again carefully checked and were found to be either due to the issues with the segmentation algorithm or known issues such as partial shower containment or large number of non-working PMTs both issues have also been seen in previous analysis. 
 \FloatBarrier
 \begin{figure}[h!]
   \centering
@@ -229,7 +229,7 @@ After the errors discovered in the initial partial unblinding were fixed by alte
 
 \section{Diffuse limit for the UHE neutrino flux}
 \label{sec:diff_limit}
-Since no neutrino candidate was found in this analysis, an upper limit to the flux of the incoming UHE$\nu$s can be evaluated. Let flux per unit area, \textit{A}, energy, solid angle $\omega$ and time be denoted by $\phi(E_{\nu}) = \frac{d^6 N_{\nu}}{dE_{\nu}\,d\omega\, dA \, dt}$. The expected number of detected neutrinos can be calculated by folding in the total exposure $\xi_{tot}(E_{\nu})$ with flux as follows,
+Since no neutrino candidate was found in this analysis, an upper limit to the flux of the incoming UHE$\nu$s can be evaluated. Let flux per unit area, \textit{A}, energy, solid angle $\Omega$ and time be denoted by $\phi(E_{\nu}) = \frac{d^6 N_{\nu}}{dE_{\nu}\,d\Omega\, dA \, dt}$. The expected number of detected neutrinos can be calculated by folding in the total exposure $\xi_{tot}(E_{\nu})$ with flux as follows,
 
 \begin{equation}
   N_{\text{expected}} = \int_{E_{\nu_{\text{min}}}}^{E_{\nu_{\text{max}}}} \phi(E_{\nu}) \cdot \xi_{\text{tot}}(E_{\nu}) \cdot dE_{\nu}
@@ -272,7 +272,7 @@ After the determination of $N_{\text{up}}$ using the Conrad approach the equatio
   \label{eq:final_lim} 
   \mathrm{k_{90} < 1.9 x 10^{-7} GeV cm^{-2} s^{-1} sr^{-1}}.
 \end{equation}
-It applies to an energy range of $E_{\nu} \epsilon [1.3 \times 10^{18} - 2.5 \times 10^{19.5}]$ which is the energy range for which $\sim$90\% total event rate is expected in the case of $E^{-2}_{\nu}$ flux. The value along with the 90\% energy range is plotted as a dashed purple line in fig~\ref{fig:Limit_comp_1}.
+It applies to an energy range of $E_{\nu} \epsilon [1.3 \times 10^{18} - 2.5 \times 10^{19.5}]$ which is the energy range for which $\sim$90\% total event rate is expected in the case of $E^{-2}_{\nu}$ flux. The value along with the 90\% energy range is plotted as a dashed purple line in Fig.~\ref{fig:Limit_comp_1}.
 
 \begin{figure}[t!]
   \centering
@@ -301,11 +301,11 @@ Assuming constant exposure and flux in each energy bin the differential limit ca
   \label{fig:Limit_comp_2}
 \end{figure}
 
-These limits provide a way to denote the sensitivity of the detector for different energies. As it can be seen from the fig.~\ref{fig:Limit_comp_1} for the Down-going Low analysis the Pierre Auger Observatory is the most sensitive for energies $\sim$1 EeV. 
+These limits provide a way to denote the sensitivity of the detector for different energies. As it can be seen from the Fig.~\ref{fig:Limit_comp_1} for the Down-going Low analysis the Pierre Auger Observatory is the most sensitive for energies $\sim$1 EeV. 
 
-Both limits are also compared to the results from the previous analysis in fig~\ref{fig:Limit_comp_1}. As it was seen in the exposure comparison it is clear that the new triggers help improve the sensitivity at lower energies. For higher energies the improvements to the upper-limit for the diffuse flux of UHE${\nu}$s though not as significant is still substantial. This improvement can be attributed to the changes in the Fisher analysis. The integral flux limit sees an improvement $\sim$ 40\%. 
+Both limits are also compared to the results from the previous analysis in Fig.~\ref{fig:Limit_comp_1}. As it was seen in the exposure comparison it is clear that the new triggers help improve the sensitivity at lower energies. For higher energies the improvements to the upper-limit for the diffuse flux of UHE${\nu}$s though not as significant is still substantial. This improvement can be attributed to the changes in the Fisher analysis. The integral flux limit sees an improvement $\sim$ 40\%. 
 
-Further, the limits obtained in this analysis are combined with the limits obtained using the old analysis. The total exposure for the time period 2004-2013 is calculated using the old analysis and selection as ToTd and MoPS were not implemented for this time period. This exposure is combined with the exposure obtained in this study with the inclusion of new triggers for the time period 2014-2021. This combination is only done under the assumption that the systematics for both the analysis are very similar. The combined exposure is then used to calculate the overall differential and integral limits for the DG$_{\text{\text{low}}}$ region in the time period 2004-2021. This is shown in fig~\ref{fig:Limit_comp_2}. Further this combination is also compared to the expected limit if only the old analysis is applied to the time period 2004-2021. This is shown in fig~\ref{fig:Limit_comp_3}.
+Further, the limits obtained in this analysis are combined with the limits obtained using the old analysis. The total exposure for the time period 2004-2013 is calculated using the old analysis and selection as ToTd and MoPS were not implemented for this time period. This exposure is combined with the exposure obtained in this study with the inclusion of new triggers for the time period 2014-2021. This combination is only done under the assumption that the systematics for both the analysis are very similar. The combined exposure is then used to calculate the overall differential and integral limits for the DG$_{\text{\text{low}}}$ region in the time period 2004-2021. This is shown in Fig.~\ref{fig:Limit_comp_2}. Further this combination is also compared to the expected limit if only the old analysis is applied to the time period 2004-2021. This is shown in Fig.~\ref{fig:Limit_comp_3}.
 
 
 
