--- a/thesis_skel/thesis_appendix_C.tex
+++ b/thesis_skel/thesis_appendix_C.tex
@@ -9,15 +9,15 @@
 \label{fig:segment_selection}
 \end{figure}
 
-This appendix aims to present some interesting reconstructed events that were observed in the background training sample when new triggers were used for the neutrino analysis. As mentioned before in sec.~\ref{subsec:reco_presel} and described in more detail in~\cite{gap_top_down_module} a segment selection process is applied to improve the quality of angular reconstruction. A small example of the working of the process is shown in fig.~\ref{fig:segment_selection}. It was observed while performing the neutrino analysis with new triggers some events were mis-reconstructed due to an untuned segment selection algorithm. These events were further checked and reconstructed using the standard reconstruction used for inclined UHECRs at the Pierre Auger Observatory which classified most of these as noise. It was also noticed that the problems with the segment selection algorithm for the new triggers could primarily arise from the presence of multiple peaks with similar amplitudes in the waveform. There is also an argument that the primary purpose of the segment selection algorithm i.e. the reduction of accidental muons which change the start time of the signal might already be addressed with the design of the new triggers thus decreasing the overall need for such an algorithm. However, these are only hypothesis and need to be confirmed with further studies. Thus, due to the inability to confirm the validity of the segment selection process for the new triggers, the algorithm was not applied to stations with these triggers in a way that the reconstruction for stations with old triggers remained unaffected. Some pictures of events which were investigated are shown below. The pictures are taken from the GUI display available to look at events within the collaboration.
+This appendix aims to present some interesting reconstructed events that were observed in the background training sample when new triggers were used for the neutrino analysis. As mentioned before in sec.~\ref{subsec:reco_presel} and described in more detail in~\cite{gap_top_down_module} a segment selection process is applied to improve the quality of angular reconstruction. A small example of the working of the process is shown in Fig.~\ref{fig:segment_selection}. It was observed while performing the neutrino analysis with new triggers some events were mis-reconstructed due to an untuned segment selection algorithm. These events were further checked and reconstructed using the standard reconstruction used for inclined UHECRs at the Pierre Auger Observatory which classified most of these as noise. It was also noticed that the problems with the segment selection algorithm for the new triggers could primarily arise from the presence of multiple peaks with similar amplitudes in the waveform. There is also an argument that the primary purpose of the segment selection algorithm i.e. the reduction of accidental muons which change the start time of the signal might already be addressed with the design of the new triggers thus decreasing the overall need for such an algorithm. However, these are only hypothesis and need to be confirmed with further studies. Thus, due to the inability to confirm the validity of the segment selection process for the new triggers, the algorithm was not applied to stations with these triggers in a way that the reconstruction for stations with old triggers remained unaffected. Some pictures of events which were investigated are shown below. The pictures are taken from the GUI display available to look at events within the collaboration.
 
-Fig~\ref{fig:bad_segment_selection} shows an event where the segmentation algorithm failed to find the correct segment for the station with the MoPS trigger. 
+Fig.~\ref{fig:bad_segment_selection} shows an event where the segmentation algorithm failed to find the correct segment for the station with the MoPS trigger. 
 
-As mentioned before in Outlook a properly tuned segmentation algorithm could also help the neutrino search with new triggers. Fig~\ref{fig:good_segment_selection} shows an event where the MoPS signal is selected with a start time of 200ns but is out of time with other stations with start times close to 240ns. A segment selection algorithm could help in this case to select the correct segment for the station with MoPS trigger.
+As mentioned before in Outlook a properly tuned segmentation algorithm could also help the neutrino search with new triggers. Fig.~\ref{fig:good_segment_selection} shows an event where the MoPS signal is selected with a start time of 200ns but is out of time with other stations with start times close to 240ns. A segment selection algorithm could help in this case to select the correct segment for the station with MoPS trigger.
 
-Fig~\ref{fig:bad_ang_fit} shows an example of an event with a bad angular fit. The indication of the bad quality can only be gauged via the $\chi^2_{\text{red}}$ and does not show up in the error on zenith angle. Such events though small in number are essential to be excluded from the analysis to avoid any bias in the final result. This is done with the Angular fit quality cut described before. 
+Fig.~\ref{fig:bad_ang_fit} shows an example of an event with a bad angular fit. The indication of the bad quality can only be gauged via the $\chi^2_{\text{red}}$ and does not show up in the error on zenith angle. Such events though small in number are essential to be excluded from the analysis to avoid any bias in the final result. This is done with the Angular fit quality cut described before. 
 
-The event shown in fig~\ref{fig:bad_fisher} shows an example of an event which had an evaluated Fisher value close to the cut value. The event had no peculiar feature which could classify it as a neutrino or otherwise.
+The event shown in Fig.~\ref{fig:bad_fisher} shows an example of an event which had an evaluated Fisher value close to the cut value. The event had no peculiar feature which could classify it as a neutrino or otherwise.
 
 \begin{figure}[h!]
   \centering
