--- a/thesis_skel/thesis_conclusion.tex
+++ b/thesis_skel/thesis_conclusion.tex
@@ -13,7 +13,7 @@
 
 Besides detecting \glspl{UHECR}, the Pierre Auger Observatory with its large Surface Detector array offers a remarkable exposure to neutrinos above $10^{17}$eV. Any potential observation of such UHE$\nu$s will further our knowledge about the known universe. Since neutrinos are not deflected as they travel towards us at Earth, they offer a direct line of sight to the sources where they were produced. They are also some of the earliest particles produced in a transient source which makes their detection an important beacon for other astronomical instruments to perform a multi-messenger observation. The Pierre Auger Observatory is constantly monitoring the sky for the presence of such UHE$\nu$s. The idea behind the detection remains the same as previous analysis at Auger where the neutrinos are assumed to induce Extensive Air Showers close to the ground with a large electro-magnetic component at ground ("young" showers). This strategy is only employed for horizontal showers ($\theta > 60^{\circ}$). Two new SD triggers, time-over-threshold-deconvolved and multiplicity of positive steps were installed in 2014 to further increase the detection efficiency for low energy neutrino induced EASs. This thesis presents the first analysis of this improved efficiency for low energy neutrino showers in the zenith range $\theta \in [60^{\circ},75^\circ]$ also known as Down-going low or DG$_{Low}$ range. In this thesis the effect of the new triggers was evaluated for two types of searches, the searches for the diffused flux of UHE$\nu$s and search for point-like sources of UHE$\nu$s. For both searches an overall improvement of efficiency is observed when information from the new triggers is incorporated in the analysis. A short summary of the three main contributions of this thesis along with an outlook detailing potential improvements are detailed in the next sections. 
 \section*{Incorporating new triggers in the DG$\mathrm{_{low}}$ UHE$\nu$s searches}
-During this thesis each facet of the DG$_{low}$ analysis was analysed. An effort was made to maximize the potential of the analysis. A blind search strategy similar to~\cite{gap_note_2013,Aab_2019_diffuse} was followed to avoid any bias in the analysis. The first step in this process was to include the information from the new triggers in the neutrino searches. About $\sim$7 years of recorded data was available for this task. The effect of the new triggers was first evaluated on neutrino simulations by including them in the analysis chain as described in section~\ref{subsubsec:nu_sel_fisher_training}. By the inclusion of new triggers an overall increase in reconstructed events was observed as shown in fig~\ref{fig:Events_vs_angle_summary}. This increase was most significant for lower energy neutrinos and decreased with increase in primary energy. This was an expected consequence due to the design of the new triggers. The overall increase also allowed for further modifications to the analysis which included lowering some stringent cuts as described in section~\ref{subsec:nu_sel_nudeteff}. For the final step of the analysis a Fisher discriminate polynomial was built and trained using the simulations (signal training sample) and a small fraction of recorded data, $\sim$20\% from the Observatory (background training sample). The polynomial is built with Area over Peaks of the stations and a differentiation between the background and signal is performed based on a cut on the Fisher value as given in eq.~\ref{eq:fisher_poly_cut}.
+During this thesis each facet of the DG$_{low}$ analysis was analysed. An effort was made to maximize the potential of the analysis. A blind search strategy similar to~\cite{gap_note_2013,Aab_2019_diffuse} was followed to avoid any bias in the analysis. The first step in this process was to include the information from the new triggers in the neutrino searches. About $\sim$7 years of recorded data was available for this task. The effect of the new triggers was first evaluated on neutrino simulations by including them in the analysis chain as described in section~\ref{subsubsec:nu_sel_fisher_training}. By the inclusion of new triggers an overall increase in reconstructed events was observed as shown in Fig.~\ref{fig:Events_vs_angle_summary}. This increase was most significant for lower energy neutrinos and decreased with increase in primary energy. This was an expected consequence due to the design of the new triggers. The overall increase also allowed for further modifications to the analysis which included lowering some stringent cuts as described in section~\ref{subsec:nu_sel_nudeteff}. For the final step of the analysis a Fisher discriminate polynomial was built and trained using the simulations (signal training sample) and a small fraction of recorded data, $\sim$20\% from the Observatory (background training sample). The polynomial is built with Area over Peaks of the stations and a differentiation between the background and signal is performed based on a cut on the Fisher value as given in eq.~\ref{eq:fisher_poly_cut}.
 After the fixing the selection, a test sample was unblinded to catch any remaining flaws in the analysis. This proved worthwhile as a small error in the reconstruction was discovered during this process. The error was promptly corrected, and the whole selection procedure was re-evaluated, and the Fisher was retrained. Since the correction involved a change to the reconstruction procedure the blind search was redone from the start. After this correction the unblinding was again performed in two stages. The new test sample and the full blinded sample, 20\% + 60\% of recorded data between the period of 1 Jan 2014 to 31 December 2012 was analysed to search for neutrinos. \textbf{No neutrino candidates} were found in the search performed using the analysis described in this thesis. 
 
 \subsection*{Outlook}
@@ -28,7 +28,7 @@ With no neutrino candidate detected a 90\% C.L. upper limit on the diffuse flux 
 \end{equation}
 in the energy range $E_{\nu} \in [1.3 \times 10^{18} - 2.5 \times 10^{19.5}]$eV. The integrated limit represents the value of the normalization of the differential flux needed to predict $\sim$2.39 expected events. The number 2.39 was evaluated using a semi Bayesian extension of the Feldman \& Cousins treatment accounting for systematic uncertainties on exposure~\cite{Conrad:2002kn}. This limit is $\sim 40\%$ stricter than the one obtained without the new triggers for the same time period. Even though this improvement is significant 
 \section*{Improvements to the point source searches for UHE$\nu$s with new triggers}
-Further a point sensitivity comparison was also performed to evaluate the performance of the new triggers. The methodology was adopted from ~\cite{Aab_2019_point} and an energy and declination dependent exposure was evaluated for the DG$\mathrm{_{low}}$ range. Using the no neutrino candidate detection ansatz, a 90\% C.L. upper limit on the neutrino flux from point-like sources as a function of source declination, $\delta$ was evaluated and presented in fig.~\ref{fig:Dec_limit_new old}. This limit was also shown to improve with the inclusion of new triggers. The improvement though small has an impact in the overall sensitivity since the different searches (DG$\mathrm{_{low}}$, DG$\mathrm{_{high}}$, ES) have different FOVs. It must also be stressed that Auger is one of the constantly running experiments sensitive to Energy ranges > $10^{18}$eV thus any improvement to its sensitivity is an important step for the potential future detection of UHE$\nu$s.
+Further a point sensitivity comparison was also performed to evaluate the performance of the new triggers. The methodology was adopted from ~\cite{Aab_2019_point} and an energy and declination dependent exposure was evaluated for the DG$\mathrm{_{low}}$ range. Using the no neutrino candidate detection ansatz, a 90\% C.L. upper limit on the neutrino flux from point-like sources as a function of source declination, $\delta$ was evaluated and presented in Fig.~\ref{fig:Dec_limit_new old}. This limit was also shown to improve with the inclusion of new triggers. The improvement though small has an impact in the overall sensitivity since the different searches (DG$\mathrm{_{low}}$, DG$\mathrm{_{high}}$, ES) have different FOVs. It must also be stressed that Auger is one of the constantly running experiments sensitive to Energy ranges > $10^{18}$eV thus any improvement to its sensitivity is an important step for the potential future detection of UHE$\nu$s.
 
 
 
